# goit-pythonweb-hw-12

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-deploy.yaml  docker-compose.yaml  main.py  nginx.conf  pyproject.toml  test.db
.github/workflows/: documentation_deploy.yaml  tests.yaml
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 12d9b0374b03_init.py  3102937f1b3a_optional_notes.py  466637aea20b_add_users.py  dc6f7b2bc644_add_user_roles.py  f0edb9af561e_add_field_confirmed_to_user_model.py
src/: schemas.py
src/api/: auth.py  birstdays.py  contacts.py  users.py  utils.py
src/conf/: config.py  messages.py  redis_client.py
src/database/: db.py  models.py
src/repository/: bistdays.py  cache.py  contacts.py  users.py
src/services/: auth.py  birstdays.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: reset_password.html
tests/: conftest.py  test_integration_auth.py  test_integration_birstdays.py  test_integration_contacts.py  test_integration_users.py  test_integration_utils.py  test_unit_birstdays.py  test_unit_contants.py  test_unit_users.py
